Fixed rendering on mobile

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     overflow-x: hidden;
     margin: 0;
     padding: 40px 0px 0px 0px;
-    background-color: #9c9a97;
+    background-color: #b0b6bc;
 }
 
 /* Style for the navigation bar */
